--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/socialite": "^5.14",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
-        "nesbot/carbon": "^2.72"
+        "nesbot/carbon": "^2.72",
+        "predis/predis": "^2.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
